--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -28,12 +28,11 @@
   </section>
   <main id="app-body" class="ms-welcome__main" style="display: none;">
 
-    <h2 class="ms-font-xl">Introduction to Natural Language Processing Project</h2>
+    <h2 class="ms-font-xl">Introduction to Natural Language Processing<br>Word Add-in Project</h2>
 
     <button role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">Analyze</button>
     </br>
       <table id='vn' class="tftable" border="1">
-      <tr><th>Statistics</th><th>Lang: VN</th></tr>
       <tr><td>Letters</td><td id='letters'></td></tr>
       <tr><td>Chars</td><td id='chars'></td></tr>
       <tr><td>Words</td><td id='words'></td></tr>
